--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/listFragment"
-        android:name="com.rjdeleon.dictionaryapp.list.ListFragment"
+        android:name="com.rjdeleon.dictionaryapp.feature.entrylist.EntryListFragment"
         android:label="fragment_list"
         tools:layout="@layout/fragment_list" />
 </navigation>
