--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/listFragment">
+    app:startDestination="@id/entryListFragment">
 
     <fragment
-        android:id="@+id/listFragment"
+        android:id="@+id/entryListFragment"
         android:name="com.rjdeleon.dictionaryapp.feature.entrylist.EntryListFragment"
         android:label="fragment_list"
         tools:layout="@layout/fragment_list" >
         <action
-            android:id="@+id/action_listFragment_to_entryFragment"
+            android:id="@+id/action_entryListFragment_to_entryFragment"
             app:destination="@id/entryFragment" />
     </fragment>
     <fragment
@@ -21,7 +21,7 @@
         tools:layout="@layout/fragment_entry" >
         <argument
             android:name="entryId"
-            android:defaultValue="value"
+            android:defaultValue="-1"
             app:argType="integer" />
     </fragment>
 </navigation>
