--- a/app/src/main/res/layout-v16/fragment_entry.xml
+++ b/app/src/main/res/layout-v16/fragment_entry.xml
@@ -23,7 +23,8 @@
             app:layout_constraintTop_toTopOf="@+id/linearLayout"
             android:foreground="#AA000000"
             android:src="@drawable/pattern"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -42,22 +43,13 @@
                 android:gravity="center"
                 android:text="@{viewModel.entry.word}"
                 android:fontFamily="@font/kaushanscript"
-                android:textSize="40sp"
+                android:textSize="50sp"
                 android:textColor="@android:color/white"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
 
-            <TextView
-                android:id="@+id/posField"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@android:color/white"
-                android:text="@{viewModel.entry.partOfSpeech}"/>
-
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/meaningField"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -65,10 +57,24 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="@{viewModel.entry.meaning}"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+            <TextView
+                android:id="@+id/posField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.entry.partOfSpeech}"/>
+
+            <TextView
+                android:id="@+id/meaningField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.entry.meaning}"/>
+
+        </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
