--- a/app/src/main/res/layout/fragment_entry.xml
+++ b/app/src/main/res/layout/fragment_entry.xml
@@ -23,7 +23,8 @@
             app:layout_constraintTop_toTopOf="@+id/linearLayout"
             android:foreground="#AA000000"
             android:src="@drawable/pattern"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -44,31 +45,52 @@
                 app:fontFamily="@font/kaushanscript"
                 android:textSize="40sp"
                 android:textColor="@android:color/white"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
-
-            <TextView
-                android:id="@+id/posField"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@android:color/white"
-                android:text="@{viewModel.entry.partOfSpeech}"/>
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:shadowColor="#ff000000"
+                android:shadowRadius="3.0"
+                android:shadowDx="3.0"
+                android:shadowDy="3.0"/>
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/meaningField"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="@{viewModel.entry.meaning}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+            <TextView
+                android:id="@+id/posField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.entry.partOfSpeech}"/>
+
+            <TextView
+                android:id="@+id/meaningField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.entry.meaning}"/>
+
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/upButton"
+            android:layout_width="48dp"
+            android:layout_height="?attr/actionBarSize"
+            android:src="@drawable/ic_arrow_back_black_24dp"
+            android:background="@android:color/transparent"
+            android:shadowColor="#ff000000"
+            android:shadowRadius="3.0"
+            android:shadowDx="3.0"
+            android:shadowDy="3.0"
+            tools:ignore="ContentDescription" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
