--- a/app/src/main/res/layout/fragment_entry.xml
+++ b/app/src/main/res/layout/fragment_entry.xml
@@ -59,6 +59,8 @@
             android:id="@+id/meaningSetList"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
