Update UI and colors

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -16,7 +16,10 @@
             android:id="@+id/dictionaryList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager">
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            tools:listitem="@layout/fragment_list_item">
 
         </android.support.v7.widget.RecyclerView>
 
